# SelfATS

./: .gitignore  ADR-001-job-aggregator-mcp-plugin.md  GEMINI.md  README.md  gemini-extension.json  handoff-brief-job-aggregator-mcp.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: refresh.yml
scripts/: add_to_claude_desktop.sh
src/job_aggregator/: server.py
src/job_aggregator/adapters/: __init__.py  ashby.py  base.py  company_boards.py  greenhouse.py  hn_hiring.py  lever.py  remoteok.py  remotive.py  wwr.py  yc_oss.py
src/job_aggregator/application/: draft.py  models.py  submit.py
src/job_aggregator/classify/: experience_gate.py  fit_score.py  pipeline.py  stage_size.py
src/job_aggregator/cv/: models.py  parser.py  store.py
src/job_aggregator/scheduler/: refresh_job.py
src/job_aggregator/storage/: company_boards.json  db.py  jobs.db  models.py
tests/: test_application.py  test_classify.py  test_cv_parser.py  test_db.py
