[project]
name = "job-aggregator-mcp"
version = "0.1.0"
description = "Local MCP server: CV-matched, multi-source job discovery for Claude"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "feedparser>=6.0",
    "python-dateutil>=2.9",
]

[project.scripts]
job-aggregator-mcp = "job_aggregator.server:main"
job-aggregator-refresh = "job_aggregator.scheduler.refresh_job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_aggregator"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
